generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model HrUser {
  id           String     @id @default(cuid())
  name         String
  email        String     @unique
  passwordHash String
  role         String     @default("HR Manager")
  designation  String     @default("HR Manager")
  company      String     @default("")
  phone        String     @default("")
  isAdmin      Boolean    @default(false)
  googleAccessToken  String @default("")
  googleRefreshToken String @default("")
  googleTokenExpiry  DateTime?
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  activities   Activity[]
  templates    Template[]
  schedulingCampaigns SchedulingCallCampaign[]
  createdJobs         Job[]                  @relation("JobCreator")
}

model Job {
  id                   String              @id @default(cuid())
  title                String
  description          String              @default("")
  screeningDurationMin Int                 @default(15)
  status               String              @default("Live")
  dept                 String              @default("")
  location             String              @default("")
  mode                 String              @default("Remote")
  createdById          String?
  createdBy            HrUser?             @relation("JobCreator", fields: [createdById], references: [id], onDelete: SetNull)
  createdAt            DateTime            @default(now())
  updatedAt            DateTime            @updatedAt
  candidates           Candidate[]
  questions            ScreeningQuestion[]
  slots                InterviewSlot[]
  activities           Activity[]
  schedulingCampaigns  SchedulingCallCampaign[]
}

model ScreeningQuestion {
  id    String @id @default(cuid())
  jobId String
  job   Job    @relation(fields: [jobId], references: [id], onDelete: Cascade)
  order Int
  text  String
}

model Candidate {
  id                    String          @id @default(cuid())
  jobId                 String
  job                   Job             @relation(fields: [jobId], references: [id], onDelete: Cascade)
  name                  String
  email                 String
  phone                 String?
  location              String          @default("")
  resumeNotes           String          @default("")
  joiningAvailability   String          @default("")
  resumeVerified        Boolean         @default(false)
  status                String          @default("imported")
  journey               String          @default("Applied")
  rankScore             Float?
  voiceTranscriptNotes  String          @default("")
  /** Short manager-facing summary (Gemini). */
  aiSummary             String          @default("")
  /** JSON array: { "question": string, "answer": string }[] for async text screening. */
  asyncScreeningAnswers String          @default("")
  /** Public URL of uploaded resume (e.g. Supabase Storage). */
  resumeUrl             String          @default("")
  /** Supabase profiles.id or other external portal id. */
  externalProfileId     String          @default("")
  /** Full parsed resume JSON from candidate apply portal. */
  parsedDataJson        String          @default("")
  createdAt             DateTime        @default(now())
  updatedAt             DateTime        @updatedAt

  @@unique([jobId, email])
  bookedSlots           InterviewSlot[]
  activities            Activity[]
  schedulingCalls       SchedulingCall[]
}

model InterviewSlot {
  id          String     @id @default(cuid())
  jobId       String
  job         Job        @relation(fields: [jobId], references: [id], onDelete: Cascade)
  startsAt    DateTime
  endsAt      DateTime
  mode        String     @default("hr")
  candidateId String?
  candidate   Candidate? @relation(fields: [candidateId], references: [id], onDelete: SetNull)
}

model Template {
  id        String   @id @default(cuid())
  title     String
  type      String   @default("Email")
  category  String   @default("Other")
  body      String   @default("")
  authorId  String?
  author    HrUser?  @relation(fields: [authorId], references: [id], onDelete: SetNull)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Activity {
  id          String     @id @default(cuid())
  tag         String
  what        String
  actorId     String?
  actor       HrUser?    @relation(fields: [actorId], references: [id], onDelete: SetNull)
  candidateId String?
  candidate   Candidate? @relation(fields: [candidateId], references: [id], onDelete: SetNull)
  jobId       String?
  job         Job?       @relation(fields: [jobId], references: [id], onDelete: SetNull)
  createdAt   DateTime   @default(now())
}

/** HR-initiated batch of Vapi calls to collect interview availability (India +91). */
model SchedulingCallCampaign {
  id        String   @id @default(cuid())
  jobId     String
  job       Job      @relation(fields: [jobId], references: [id], onDelete: Cascade)
  actorId   String
  actor     HrUser   @relation(fields: [actorId], references: [id], onDelete: Cascade)
  status    String   @default("active")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  calls     SchedulingCall[]
}

model SchedulingCall {
  id              String   @id @default(cuid())
  campaignId      String
  campaign        SchedulingCallCampaign @relation(fields: [campaignId], references: [id], onDelete: Cascade)
  candidateId     String
  candidate       Candidate @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  phoneE164       String
  vapiCallId      String   @default("")
  status          String   @default("queued")
  transcript      String   @default("")
  parsedAvailability String @default("")
  bookedSlotId    String?
  errorMessage    String   @default("")
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}
