erDiagram
  HrUser ||--o{ Job : creates
  HrUser ||--o{ Template : authors
  HrUser ||--o{ Activity : actor
  HrUser ||--o{ SchedulingCallCampaign : runs
  Job ||--o{ Candidate : has
  Job ||--o{ ScreeningQuestion : has
  Job ||--o{ InterviewSlot : has
  Job ||--o{ SchedulingCallCampaign : has
  Candidate ||--o{ InterviewSlot : booked
  Candidate ||--o{ SchedulingCall : receives
  SchedulingCallCampaign ||--o{ SchedulingCall : contains